--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -33,28 +33,44 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HslCommunication, Version=4.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\HslCommunication.4.3.1\lib\net35\HslCommunication.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DllSupport\HslCommunication.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DllSupport\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Opc.Ua.Client, Version=1.3.342.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpcUaHelper.1.0.2\lib\Opc.Ua.Client.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\OpcUaDll\Opc.Ua.Client.dll</HintPath>
     </Reference>
     <Reference Include="Opc.Ua.ClientControls, Version=1.3.342.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpcUaHelper.1.0.2\lib\Opc.Ua.ClientControls.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\OpcUaDll\Opc.Ua.ClientControls.dll</HintPath>
     </Reference>
     <Reference Include="Opc.Ua.Configuration, Version=1.3.342.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpcUaHelper.1.0.2\lib\Opc.Ua.Configuration.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\OpcUaDll\Opc.Ua.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Opc.Ua.Core, Version=1.3.342.0, Culture=neutral, PublicKeyToken=78aea80f6827b5ab, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpcUaHelper.1.0.2\lib\Opc.Ua.Core.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\OpcUaDll\Opc.Ua.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Opc.Ua.Server">
+      <HintPath>..\OpcUaDll\Opc.Ua.Server.dll</HintPath>
+    </Reference>
+    <Reference Include="Opc.Ua.ServerControls">
+      <HintPath>..\OpcUaDll\Opc.Ua.ServerControls.dll</HintPath>
     </Reference>
     <Reference Include="OpcUaHelper, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpcUaHelper.1.0.2\lib\OpcUaHelper.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\OpcUaDll\OpcUaHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IdentityModel.Services" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,6 +82,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\Core\DataParse\DataParseRegular.cs" />
+    <Compile Include="Configuration\Core\DataParse\DataSettings.cs" />
+    <Compile Include="Configuration\Core\DataParse\ByteDataParse.cs" />
+    <Compile Include="Configuration\Core\DataParse\RegularManagement.cs" />
     <Compile Include="FormServer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,7 +106,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,6 +118,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OpcUaServer\" />
+    <Folder Include="SettingsSupport\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
