--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -83,9 +83,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Core\DataParse\DataParseRegular.cs" />
-    <Compile Include="Configuration\Core\DataParse\DataSettings.cs" />
+    <Compile Include="Configuration\Core\Device\DeviceNode.cs" />
+    <Compile Include="Configuration\Core\Device\DeviceRequest.cs" />
     <Compile Include="Configuration\Core\DataParse\ByteDataParse.cs" />
     <Compile Include="Configuration\Core\DataParse\RegularManagement.cs" />
+    <Compile Include="Configuration\Core\ModbusServer\ModbusNode.cs" />
+    <Compile Include="Configuration\Core\ModbusServer\ModbusRequest.cs" />
+    <Compile Include="Configuration\Node\NodeClass.cs" />
+    <Compile Include="Configuration\Node\XmlNode.cs" />
+    <Compile Include="NodeSettings\FormNodeSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NodeSettings\FormNodeSetting.Designer.cs">
+      <DependentUpon>FormNodeSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormServer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +105,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Utils.cs" />
+    <EmbeddedResource Include="NodeSettings\FormNodeSetting.resx">
+      <DependentUpon>FormNodeSetting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormServer.resx">
       <DependentUpon>FormServer.cs</DependentUpon>
     </EmbeddedResource>
