--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -89,8 +89,15 @@
     <Compile Include="Configuration\Core\DataParse\RegularManagement.cs" />
     <Compile Include="Configuration\Core\ModbusServer\ModbusNode.cs" />
     <Compile Include="Configuration\Core\ModbusServer\ModbusRequest.cs" />
+    <Compile Include="Configuration\Device\ModbusTcpClient.cs" />
     <Compile Include="Configuration\Node\NodeClass.cs" />
     <Compile Include="Configuration\Node\XmlNode.cs" />
+    <Compile Include="NodeSettings\FormModbusTcp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NodeSettings\FormModbusTcp.Designer.cs">
+      <DependentUpon>FormModbusTcp.cs</DependentUpon>
+    </Compile>
     <Compile Include="NodeSettings\FormNodeClass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +119,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Utils.cs" />
+    <EmbeddedResource Include="NodeSettings\FormModbusTcp.resx">
+      <DependentUpon>FormModbusTcp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NodeSettings\FormNodeClass.resx">
       <DependentUpon>FormNodeClass.cs</DependentUpon>
     </EmbeddedResource>
@@ -234,6 +244,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Imgs\xbox1Color_16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imgs\envelope_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imgs\ExtensionManager_vsix.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imgs\PencilAngled_16xLG_color.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
