--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -82,17 +82,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\Core\DataParse\DataParseRegular.cs" />
-    <Compile Include="Configuration\Core\Device\DeviceNode.cs" />
-    <Compile Include="Configuration\Core\Device\DeviceRequest.cs" />
-    <Compile Include="Configuration\Core\DataParse\ByteDataParse.cs" />
-    <Compile Include="Configuration\Core\DataParse\RegularManagement.cs" />
-    <Compile Include="Configuration\Core\ModbusServer\ModbusNode.cs" />
-    <Compile Include="Configuration\Core\ModbusServer\ModbusRequest.cs" />
+    <Compile Include="Configuration\Core\DataParseRegular.cs" />
+    <Compile Include="Configuration\Node\NodeClassRenderItem.cs" />
+    <Compile Include="Configuration\Node\DeviceNode.cs" />
+    <Compile Include="Configuration\Node\DeviceRequest.cs" />
+    <Compile Include="Configuration\Core\ByteDataParse.cs" />
+    <Compile Include="Configuration\Core\RegularManagement.cs" />
+    <Compile Include="Configuration\ModbusServer\ModbusNode.cs" />
+    <Compile Include="Configuration\ModbusServer\ModbusRequest.cs" />
     <Compile Include="Configuration\Device\ModbusTcpClient.cs" />
     <Compile Include="Configuration\Node\IXmlConvert.cs" />
     <Compile Include="Configuration\Node\NodeClass.cs" />
-    <Compile Include="Configuration\Node\XmlNode.cs" />
+    <Compile Include="Configuration\Node\NodeClassInfo.cs" />
     <Compile Include="Controls\TreeViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -272,6 +273,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Imgs\save_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imgs\interface_16xLG.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
