--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -121,6 +121,12 @@
     <Compile Include="FormServer.Designer.cs">
       <DependentUpon>FormServer.cs</DependentUpon>
     </Compile>
+    <Compile Include="NodeSettings\FormRegularCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NodeSettings\FormRegularCode.Designer.cs">
+      <DependentUpon>FormRegularCode.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestSettings\FormRequest.cs">
@@ -129,6 +135,7 @@
     <Compile Include="RequestSettings\FormRequest.Designer.cs">
       <DependentUpon>FormRequest.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsSupport\SharpSettings.cs" />
     <Compile Include="Utils\Utils.cs" />
     <EmbeddedResource Include="NodeSettings\FormModbusTcp.resx">
       <DependentUpon>FormModbusTcp.cs</DependentUpon>
@@ -141,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormServer.resx">
       <DependentUpon>FormServer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NodeSettings\FormRegularCode.resx">
+      <DependentUpon>FormRegularCode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -170,7 +180,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OpcUaServer\" />
-    <Folder Include="SettingsSupport\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Imgs\abstr1.png" />
