--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Controls\TreeViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormOpcSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormOpcSettings.designer.cs">
+      <DependentUpon>FormOpcSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="NodeSettings\FormModbusTcp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,11 @@
     <Compile Include="NodeSettings\FormRegularCode.Designer.cs">
       <DependentUpon>FormRegularCode.cs</DependentUpon>
     </Compile>
+    <Compile Include="OpcUaServer\DataTransferServer.cs" />
+    <Compile Include="OpcUaServer\HSharpNodeManager.cs" />
+    <Compile Include="OpcUaServer\NodeManagerBase.cs" />
+    <Compile Include="OpcUaServer\OpcNamespaces.cs" />
+    <Compile Include="OpcUaServer\OpcUaServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestSettings\FormRegularNode.cs">
@@ -143,6 +154,9 @@
     </Compile>
     <Compile Include="SettingsSupport\SharpSettings.cs" />
     <Compile Include="Utils\Utils.cs" />
+    <EmbeddedResource Include="FormOpcSettings.resx">
+      <DependentUpon>FormOpcSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NodeSettings\FormModbusTcp.resx">
       <DependentUpon>FormModbusTcp.cs</DependentUpon>
     </EmbeddedResource>
@@ -187,9 +201,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="OpcUaServer\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Imgs\abstr1.png" />
   </ItemGroup>
