--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Controls\TreeViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Device\Interface\IDeviceCore.cs" />
     <Compile Include="FormOpcSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +168,7 @@
     <Compile Include="RequestSettings\FormRequest.Designer.cs">
       <DependentUpon>FormRequest.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsSupport\SharpRegulars.cs" />
     <Compile Include="SettingsSupport\SharpSettings.cs" />
     <Compile Include="Utils\DeviceUtil.cs" />
     <Compile Include="Utils\Utils.cs" />
@@ -332,6 +334,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Imgs\interface_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Device\DeviceCoreBase\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
