初步实现了分类节点和设备节点的OPC显示。

--- a/HSLSharp/HSLSharp.csproj
+++ b/HSLSharp/HSLSharp.csproj
@@ -228,6 +228,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Opc.Ua.CertificateGenerator.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="OpcUaTest.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
